<resources>
    <string name="app_name">DataHop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear groups</string>
    <string name="action_group">Create group</string>
    <string name="action_search">Search users nearby</string>
    <string name="action_clear_content">Clear content</string>

    <string name="action_delete">You will lose all the content added/received</string>
    <string name="action_delete_item">Are you sure you want to delete this item?</string>
    <string name="action_delete_group">Are you sure you want to delete this group?</string>

    <string name="user_name">user_name</string>

    <string name="list_thumbnail_view_description">Video preview thumbnail</string>


    <string name="hint_user">User Name</string>
    <string name="sign_in">Set Name</string>

    <string name="wallet_description">Wallet status</string>
    <string name="contract_address">Contract address</string>
    <string name="wallet_address">Wallet address</string>
    <string name="balance">Balance</string>

    <string name="transfer_funds">Transfer funds</string>

    <string name="pref_category_wifi_title_status">WifiDirect Status</string>
    <string name="pref_category_bt_title_status">Bluetooth Status</string>

    <string name="wifi_timers">WifiDirect Settings</string>
    <string name="bluetooth_timers">Bluetooth Settings</string>

    <string name="status">Status</string>
    <string name="sd">Service Discovery</string>
    <string name="ap">Access Point</string>
    <string name="restarts">Restarts</string>

    <string name="btstatus">Status</string>
    <string name="btconnect">Connections</string>

    <string name="checkbox_source">Disable BLE Scanning</string>
    <string name="checkbox_wifi">Enable WiFi Direct SD</string>
    <string name="checkbox_bt">Enable Bluetooth SD</string>

    <string name="datahop_name">DataHop</string>
    <string name="service_name">DataHop Service</string>

    <string name="sharing_name">Dissemination settings</string>
    <string name="sharing_config">Help disseminating files only for groups where I participate</string>

    <string name="prestige_name">Prestige settings</string>
    <string name="prestige_text">Disable Prestige blockchain reporting</string>

    <string name="timer_wifi_waittime">Waiting time for WiFi connection</string>
    <string name="timer_wifi_peersuccess">Peer discovery restart time</string>
    <string name="timer_wifi_peerfailed">Peer discovery retry when failed</string>
    <string name="timer_wifi_servicesuccess">Service Discovery retry when failed</string>
    <string name="timer_wifi_servicefailed">Service Discovery restart time</string>
    <string name="timer_wifi_hsrestart">Hotspot mode restart time</string>

    <string name="timer_bt_scan">Bluetooth scan duration</string>
    <string name="timer_bt_idle">Bluetooth idle time</string>
    <string name="timer_bt_advfg">Bluetooth time between scans when app in foreground</string>
    <string name="timer_bt_advbg">Bluetooth time between scans when app in background</string>

    <string name="activity_message_list_group_info_you_label">you</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>

</resources>
