<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      style="@style/default_linear_layout_padding"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_marginTop="10dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_name"
        />

    <CheckBox
        android:id="@+id/checkbox_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:onClick="onCheckboxClicked"
        android:text="@string/checkbox_source" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sharing_name"
        />

    <CheckBox
        android:id="@+id/checkbox_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:onClick="onCheckboxClicked"
        android:text="@string/sharing_config" />

    <LinearLayout android:id="@+id/bt_status_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView style="?android:listSeparatorTextViewStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/bluetooth_timers"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <TextView style="@style/main_fragment_list_title"
            android:text="@string/timer_bt_scan"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/bt_scan_input"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"/>
      </LinearLayout>

      <!--<LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <TextView style="@style/main_fragment_list_title"
            android:text="@string/timer_bt_idle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/bt_idle_input"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"/>
      </LinearLayout>-->

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <TextView style="@style/main_fragment_list_title"
            android:text="@string/timer_bt_advfg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/bt_advfg_input"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <TextView style="@style/main_fragment_list_title"
            android:text="@string/timer_bt_advbg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/bt_advbg_input"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"/>
      </LinearLayout>

    </LinearLayout>

  </LinearLayout>
</ScrollView>
